--- a/Vdolce.css
+++ b/Vdolce.css
@@ -3,14 +3,15 @@
     font-family: KanitBlack;
 }
 body{
-    background-color: rgb(151, 12, 231);
+    background-image: url(ft.jpg);
     border-bottom:#FFFFFF solid 3px;
+    margin: 20px;
 }
 h1{
     color: rgb(255, 255, 255);
     font-family: verdana;
     font-style:bold;
-    font-size: 40px;
+    font-size: 35px;
     border: 4px white solid;
     border-radius:10px;
     text-shadow: 2px 2px 5px #e0e0e0;
@@ -20,11 +21,23 @@ p{
     font-family:Arial;
     font-size:20px;
     color:#FFFFFF;
+    text-align: center;
 }
-#div{background-color: #ff00dd;
-border: #ff39e5 10px solid;
-border-radius: 10px;
-box-shadow: #ff39e5 -5px -5px 5px;}
+#div{background-image: url(purple.png) ;
+    border: #ff39e5 10px solid;
+    border-radius: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    background-position: center;
+    background-size: cover;
+    font-family: Arial;
+    font-size: 15px;
+}
 #h2{
     font-family: KanitBlack;
     font-size: 25px;
@@ -36,25 +49,97 @@ box-shadow: #ff39e5 -5px -5px 5px;}
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    width: 700px;
-    height: 125px;
+    width: 50%;
     display: block;
+    border-radius: 20px;
+    color: #FFFFFF;
+    background-color: black;
+    height: 100px;
 }
+#button:hover {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    cursor: pointer
+  }
 #Ft{
-    float:right;
-}
-body{
-    margin-right: auto;
     margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 25%;
 }
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 30%;
   }
 #h2{
     margin-left: auto;
     margin-right: auto;
-    width: 50%;}
+    width: 50%;
+    text-align: center;
+    color: #FFFFFF;
+    font-size: 30px;
+}
+footer{
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    text-align: center;
+}
+#h1{
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+#buttons{
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    text-align: center;
+
+}
+.submit:hover {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    cursor: pointer
+  }
+#vd{
+    width: 300px;
+    height: 240px;
+    float: left;
+    margin-right: 20px;
+}
+#p1{
+    text-align: left;
+}
+input{
+    background: transparent;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 20px;
+    height: 20px;
+}
+::placeholder{
+    color: rgb(92, 92, 92);
+}
+.submit{
+    border-radius: 13px;
+    border: 5px;
+    width: 100px;
+    height: 40px;
+    background-color: black;
+    color: #FFFFFF;
+    border: 2px solid white;
+}
+select{
+    background: transparent;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 20px;
+}
+a{
+    text-decoration: none;
+}
+#p1{
+    font-size: 19px;
+}
 /*na sero vdolce w fortnite*/
